--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
+    "start": "nodemon src/index.ts",
     "build": "npx tsc",
     "jasmine": "jasmine",
     "test": "npm run build && npm run jasmine"
@@ -19,7 +20,9 @@
     "@types/supertest": "^2.0.12",
     "eslint": "^8.19.0",
     "node-ts": "^5.1.2",
+    "nodemon": "^2.0.19",
     "prettier": "^2.7.1",
+    "ts-node": "^10.9.1",
     "typescript": "^4.7.4"
   },
   "dependencies": {
